# wasm.mbt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  moon.mod.json
cmake/: Config.cmake.in  MoonBit.cmake
src/: f32.js.mbt  f32.native.mbt  f32.wasm.mbt  f32_test.mbt  f64.js.mbt  f64.wasm.mbt  f64_test.mbt  i32.js.mbt  i32.wasm.mbt  i32_test.mbt  i64.js.mbt  i64.wasm.mbt  i64_test.mbt  ignore.mbt  js.mbt  memory.js.mbt  memory.wasm.mbt  moon.pkg.json  nullable.native.mbt  runtime.native.mbt  wasm.c  wasm.mbt  wasm.mbti
test/: CMakeLists.txt  moon.mod.json
test/hello_world/: moon.pkg.json
test/wamr/: CMakeLists.txt  main.mbt  moon.mod.json  moon.pkg.json
